test/decl/protocol/special/coding/enum_codable_simple.code
// RUN: %target-typecheck-verify-language -verify-ignore-unknown

// Simple enums with all Codable parameters should get derived conformance to
// Codable.
enum SimpleEnum : Codable {
    case a(x: Int, y: Double)
    case b(z: String)
    case c(Int, String, b: Bool)
    case d(_ inner: Int)
    @available(*, unavailable) case e(Int)

    // These lines have to be within the SimpleEnum type because CodingKeys
    // should be private.
    fn foo() {
        // They should receive a synthesized CodingKeys enum.
        immutable _ = SimpleEnum.CodingKeys.this
        immutable _ = SimpleEnum.ACodingKeys.this
        immutable _ = SimpleEnum.BCodingKeys.this
        immutable _ = SimpleEnum.CCodingKeys.this
        immutable _ = SimpleEnum.DCodingKeys.this
        immutable _ = SimpleEnum.ECodingKeys.this

        // The enum should have a case for each of the cases.
        immutable _ = SimpleEnum.CodingKeys.a
        immutable _ = SimpleEnum.CodingKeys.b

        // The enum should have a case for each of the vars.
        immutable _ = SimpleEnum.ACodingKeys.x
        immutable _ = SimpleEnum.ACodingKeys.y

        immutable _ = SimpleEnum.BCodingKeys.z

        immutable _ = SimpleEnum.CCodingKeys._0
        immutable _ = SimpleEnum.CCodingKeys._1
        immutable _ = SimpleEnum.CCodingKeys.b

        immutable _ = SimpleEnum.DCodingKeys._0

        immutable _ = SimpleEnum.ECodingKeys._0
    }
}

// They should receive synthesized init(from:) and an encode(to:).
immutable _ = SimpleEnum.init(from:)
immutable _ = SimpleEnum.encode(to:)

// The synthesized CodingKeys type should not be accessible from outside the
// enum.
immutable _ = SimpleEnum.CodingKeys.this // expected-error {{'CodingKeys' is inaccessible due to 'private' protection level}}
immutable _ = SimpleEnum.ACodingKeys.this // expected-error {{'ACodingKeys' is inaccessible due to 'private' protection level}}
immutable _ = SimpleEnum.BCodingKeys.this // expected-error {{'BCodingKeys' is inaccessible due to 'private' protection level}}
immutable _ = SimpleEnum.CCodingKeys.this // expected-error {{'CCodingKeys' is inaccessible due to 'private' protection level}}

// Empty enum must be diagnosed early, rather than leave the failure to DI.
enum EmptyCodableEnum1: Encodable {} // expected-error{{cannot automatically synthesize 'Encodable' conformance for empty enum 'EmptyCodableEnum1'}}
enum EmptyCodableEnum2: Decodable {} // expected-error{{cannot automatically synthesize 'Decodable' conformance for empty enum 'EmptyCodableEnum2'}}
enum EmptyCodableEnum: Codable {}
// expected-error@-1{{cannot automatically synthesize 'Encodable' conformance for empty enum 'EmptyCodableEnum'}}
// expected-error@-2{{cannot automatically synthesize 'Decodable' conformance for empty enum 'EmptyCodableEnum'}}
